# edu

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml  tutorial.sqlite
2022/introcomp/16-03/: index.html
2022/introcomp/17-02/: index.html
2022/introcomp/24-02/: index.html
2022/introcomp/home/: index.html
2025/introcomp/home/: index.html
2025/introcomp/intermediate_python/: index.html
2025/introcomp/intro_latex/: index.html
2025/introcomp/intro_pandas_sqlite/: index.html
2025/introcomp/intro_python/: index.html
2025/introcomp/next_steps_latex/: index.html
2025/introcomp/pandas_2/: index.html
2025/introcomp/rev_a1/: index.html
2025/ml/home/: index.html
IntroComp/17-02/: 17-02.tex
IntroComp/24-02/: references.bib
about/: index.html
docs/: about.md  index.md
docs/2022/introcomp/: 16-03.md  17-02.md  24-02.md  home.md
docs/2025/introcomp/: home.md  intermediate_python.md  intro_latex.md  intro_pandas_sqlite.md  intro_python.md  next_steps_latex.md  pandas_2.md  rev_a1.md
docs/2025/ml/: home.md
docs/introcomp/: 16-03.md  17-02.md  24-02.md  home.md
introcomp/16-03/: index.html
introcomp/17-02/: index.html
introcomp/24-02/: index.html
introcomp/home/: index.html
resources/2022/introcomp/16-03/: 16-03.tex
resources/2022/introcomp/24-02/: 24-02.tex
resources/2025/ml/: pyproject.toml
resources/2025/ml/03-07/: knn.py
resources/2025/ml/11-07/: lr.py
resources/2025/ml/28-07/: lmc.py
resources/2025/ml/31-07/: intro-pytorch.py
search/: search_index.json
(+13 files in other folders)
